# rules_avr

./: .gitignore  MODULE.bazel  README.md  defs.bzl
avr/: BUILD.bazel  defs.bzl  extensions.bzl  hosts.bzl
avr/platform/: BUILD.bazel
avr/private/: BUILD.bazel  avrdude.bzl  binary.bzl  firmware.bzl  gcc_source.bzl  mcus.bzl  transitions.bzl
avrdude/: BUILD.bazel  avrdude.BUILD.bazel  avrdude_wrapper.sh  llvm_libtool.patch  toolchain.bzl
cc/: BUILD.bazel  avr_action_names.bzl  defs.bzl
cc/private/: BUILD.bazel  BUILD.toolchains  archives.bzl  cc_toolchain_config.bzl  repositories.bzl
cc/toolchain/: BUILD.bazel  BUILD.distro_files
examples/led/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/led-rs/: .bazelrc  BUILD.bazel  MODULE.bazel  rust_analyzer.sh
examples/led-rs/firmware/barebones/: BUILD.bazel
examples/led-rs/firmware/basic-pac/: BUILD.bazel
examples/led-rs/firmware/interrupts/: BUILD.bazel
examples/led/src/hello/: BUILD.bazel  hello_main.c
examples/led/src/pulse/: BUILD.bazel  button.c  button.h  led.c  led.h  pulse_led_main.c
rust/: BUILD.bazel  defs.bzl  rust_project.bzl
rust/config/: BUILD.bazel
rust/private/: BUILD.bazel  BUILD.rust_src  BUILD.toolchains  gen_rust_project.sh  repositories.bzl  sysroot.bzl
