module(
    name = "rules_avr",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_rust", version = "0.71.1")
bazel_dep(name = "rules_shell", version = "0.7.1")
bazel_dep(name = "bison", version = "3.8.2.bcr.7")
bazel_dep(name = "flex", version = "2.6.4.bcr.5")
bazel_dep(name = "m4", version = "1.4.21.bcr.4")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# TODO(sbucur): Remove once inherit_attrs is supported with cc_binary.
cc_compatibility_proxy = use_extension("@rules_cc//cc:extensions.bzl", "compatibility_proxy")
use_repo(cc_compatibility_proxy, "cc_compatibility_proxy")

avr = use_extension("//avr:extensions.bzl", "avr_toolchains", dev_dependency = True)
avr.cc_toolchain(
    distro = "avr-toolchain-gcc15.2.0-libc2.3.1-binutils2.46",
)
avr.rust_toolchain(
    edition = "2024",
    nightly_stamp = "2026-06-18",
    src_sha256 = "f6eaf06ff6eeff09750219bd29ea9ad96139d46a884a4179d3ac3fe23bd84e8e",
    tools_sha256s = {
        "2026-06-18/cargo-nightly-aarch64-apple-darwin.tar.xz": "3d42aaa1a6324521b0c0a962a09cf9cf50fa82b33b63da30331e911e67f5be9b",
        "2026-06-18/clippy-nightly-aarch64-apple-darwin.tar.xz": "03388bd14b5a1775c66c9b93ff7582fd5bb32b129f7aed7150baf85c8ff581cc",
        "2026-06-18/llvm-tools-nightly-aarch64-apple-darwin.tar.xz": "aef00b81eb2e96df663020ef03089e1faa6e0099c07d8fdf512c16c2948beadb",
        "2026-06-18/rust-std-nightly-aarch64-apple-darwin.tar.xz": "a02dbb52a22533c1e3ad2d7054a64128660402acddc70a5d2a8520742896ec3b",
        "2026-06-18/rustc-nightly-aarch64-apple-darwin.tar.xz": "9efd84a1fe2f74611c9fc4725823d6702bb6080077cb8be8a18d5e8b8c11c580",
        "2026-06-18/rustfmt-nightly-aarch64-apple-darwin.tar.xz": "b73ae56215fa574f8367498483f77cd8df5f1b4eaf44f57d577d3f182875cd9a",
        "2026-06-18/cargo-nightly-aarch64-unknown-linux-gnu.tar.xz": "b07388440d1074971b5a6017a09bbe48fac729db2d0bd09aa732ddd8e594e015",
        "2026-06-18/clippy-nightly-aarch64-unknown-linux-gnu.tar.xz": "c5f2a8592e4e14eab74727116e576afd99bec6989cb4e44640199f2d7936ee18",
        "2026-06-18/llvm-tools-nightly-aarch64-unknown-linux-gnu.tar.xz": "111a3f9ef5656e9fb8ea1f7a3567a12fea8a9e5d0ff5f715ed280b4c6f721807",
        "2026-06-18/rust-std-nightly-aarch64-unknown-linux-gnu.tar.xz": "1d95cc7684d32679a113979c8e4688cf28c67dcf4db6be55a1fb87560f7761d2",
        "2026-06-18/rustc-nightly-aarch64-unknown-linux-gnu.tar.xz": "e467d850c90d724541fda6f6a4505086435c24d4e96fd0b9a772f8144fbb8489",
        "2026-06-18/rustfmt-nightly-aarch64-unknown-linux-gnu.tar.xz": "65f2f09a6102d0d21689d464afe5a190da69d76e6be360f4d0d03fac20c2d894",
        "2026-06-18/cargo-nightly-x86_64-unknown-linux-gnu.tar.xz": "8a28c8bf2bc040bdd708b3fb498e602d13b266ffc2db430429aa22074e629298",
        "2026-06-18/clippy-nightly-x86_64-unknown-linux-gnu.tar.xz": "2cc0142a564371bd3a0b65318455801641243d2dc891e37306857b1ce6ff452f",
        "2026-06-18/llvm-tools-nightly-x86_64-unknown-linux-gnu.tar.xz": "2125a161da4e18f0c00fc6bb4f4b28729f6c8e33c6691973e29c99a6dc06f036",
        "2026-06-18/rust-std-nightly-x86_64-unknown-linux-gnu.tar.xz": "2684fb3c942499172d36de43baaa0facf055827de5de6d25497be0787950bd28",
        "2026-06-18/rustc-nightly-x86_64-unknown-linux-gnu.tar.xz": "1597d5c5d74237b2f4d7fbd13b76ff9e4d0f6cc9d4359b9f8947b466faeea8a8",
        "2026-06-18/rustfmt-nightly-x86_64-unknown-linux-gnu.tar.xz": "355de3bb7c6aaed5b681bf6b50443ae99278988816d2e50397a2b77d41f67195",
    },
)
use_repo(
    avr,
    "avr_cc_toolchains",
    "avr_gcc_darwin_arm64",
    "avr_gcc_linux_arm64",
    "avr_gcc_linux_x86",
    "avr_rust_analyzer_tools",
    "avr_rust_host_tools",
    "avr_rust_src",
    "avr_rust_toolchains",
)

register_toolchains(
    "@avr_cc_toolchains//:all",
    "@avr_rust_toolchains//:all",
    "//avrdude:all",
    dev_dependency = True,
)

foreign_tools = use_extension("@rules_foreign_cc//foreign_cc:extensions.bzl", "tools")
use_repo(
    foreign_tools,
    "cmake_3.31.8_toolchains",
    "ninja_1.13.0_toolchains",
    "rules_foreign_cc_framework_toolchains",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "avrdude_src",
    build_file = "//avrdude:avrdude.BUILD.bazel",
    patch_args = ["-p1"],
    patches = ["//avrdude:llvm_libtool.patch"],
    sha256 = "2d3016edd5281ea09627c20b865e605d4f5354fe98f269ce20522a5b910ab399",
    strip_prefix = "avrdude-8.1",
    urls = ["https://github.com/avrdudes/avrdude/archive/refs/tags/v8.1.tar.gz"],
)

gcc_source = use_repo_rule("//avr/private:gcc_source.bzl", "gcc_source")

gcc_source(
    name = "gcc_src",
    gcc_sha256 = "438fd996826b0c82485a29da03a72d71d6e3541a83ec702df4271f6fe025d24e",
    gcc_strip_prefix = "gcc-15.2.0",
    gcc_url = "https://ftpmirror.gnu.org/gnu/gcc/gcc-15.2.0/gcc-15.2.0.tar.xz",
    gmp_sha256 = "eae9326beb4158c386e39a356818031bd28f3124cf915f8c5b1dc4c7a36b4d7c",
    gmp_strip_prefix = "gmp-6.2.1",
    gmp_url = "https://gcc.gnu.org/pub/gcc/infrastructure/gmp-6.2.1.tar.bz2",
    isl_sha256 = "fcf78dd9656c10eb8cf9fbd5f59a0b6b01386205fe1934b3b287a0a1898145c0",
    isl_strip_prefix = "isl-0.24",
    isl_url = "https://gcc.gnu.org/pub/gcc/infrastructure/isl-0.24.tar.bz2",
    mpc_sha256 = "17503d2c395dfcf106b622dc142683c1199431d095367c6aacba6eec30340459",
    mpc_strip_prefix = "mpc-1.2.1",
    mpc_url = "https://gcc.gnu.org/pub/gcc/infrastructure/mpc-1.2.1.tar.gz",
    mpfr_sha256 = "feced2d430dd5a97805fa289fed3fc8ff2b094c02d05287fd6133e7f1f0ec926",
    mpfr_strip_prefix = "mpfr-4.1.0",
    mpfr_url = "https://gcc.gnu.org/pub/gcc/infrastructure/mpfr-4.1.0.tar.bz2",
)

http_archive(
    name = "binutils_src",
    build_file_content = """
filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "0f3152632a2a9ce066f20963e9bb40af7cf85b9b6c409ed892fd0676e84ecd12",
    strip_prefix = "binutils-2.46.0",
    urls = ["https://sourceware.org/pub/binutils/releases/binutils-2.46.0.tar.bz2"],
)

http_archive(
    name = "avr_libc_src",
    build_file_content = """
filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "2ec0827ec833ca6715a87221f31799d60da1c8638aa98eaafae42e0c2e302f5c",
    strip_prefix = "avr-libc-2.3.1",
    urls = ["https://github.com/avrdudes/avr-libc/releases/download/avr-libc-2_3_1-release/avr-libc-2.3.1.tar.bz2"],
)

register_toolchains(
    "@cmake_3.31.8_toolchains//:all",
    "@ninja_1.13.0_toolchains//:all",
    "@rules_foreign_cc_framework_toolchains//:all",
    "@rules_foreign_cc//toolchains:preinstalled_m4_toolchain",
    "@rules_foreign_cc//toolchains:preinstalled_make_toolchain",
    "@rules_foreign_cc//toolchains:preinstalled_pkgconfig_toolchain",
    dev_dependency = True,
)
