# Copyright 2026 The rules_avr authors
#

load(":avrdude.bzl", "avrdude_config")
load(":mcus.bzl", "AVR_MCUS")

package(default_visibility = ["//visibility:public"])

avrdude_config(
    name = "avrdude_config",
    # Avrdude part name inferred from the active MCU platform constraint.
    # Resolves to the avrdude short part name (e.g. "m328p", "avr128db48") when
    # a known MCU platform is selected, and to "" when no MCU platform is active.
    part = select({
        "//avr/platform:%s" % mcu: spec.avrdude_part
        for mcu, spec in AVR_MCUS.items()
        if spec.avrdude_part != None
    } | {"//conditions:default": ""}),
)
