# Copyright 2026 The rules_avr authors
#

bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_avr", version = "0.0.0")
local_path_override(
    module_name = "rules_avr",
    path = "../..",
)

avr = use_extension("@rules_avr//avr:extensions.bzl", "avr_toolchains")
avr.cc_toolchain(
    distro = "avr-toolchain-gcc15.2.0-libc2.3.1-binutils2.46",
)
use_repo(
    avr,
    "avr_cc_toolchains",
    "avr_gcc_darwin_arm64",
    "avr_gcc_linux_arm64",
    "avr_gcc_linux_x86",
)

register_toolchains(
    "@avr_cc_toolchains//:all",
    "@rules_avr//avrdude:all",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "7fe1eab26d2b8eeb5e1c6a2f38bddb001e3f9696",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
