# Copyright 2026 The rules_avr authors
#

load("@rules_avr//:defs.bzl", "avr_rust_binary", "avrdude_flash")

avr_rust_binary(
    name = "interrupts",
    srcs = ["src/main.rs"],
    compatible_mcus = ["avr128db48"],
    mcu = "avr128db48",
    deps = ["@avr_crates//:avr-device"],
)

avrdude_flash(
    name = "flash",
    src = ":interrupts",
    programmer = "pkobn_updi",
)
