# Copyright 2026 The rules_avr authors
#

load("@rules_avr//:defs.bzl", "avr_cc_binary", "avrdude_flash")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "led",
    srcs = ["led.c"],
    hdrs = ["led.h"],
)

cc_library(
    name = "button",
    srcs = ["button.c"],
    hdrs = ["button.h"],
)

avr_cc_binary(
    name = "pulse_led",
    srcs = ["pulse_led_main.c"],
    compatible_mcus = ["avr128db48"],
    mcu = "avr128db48",
    deps = [
        ":button",
        ":led",
    ],
)

avrdude_flash(
    name = "flash",
    src = ":pulse_led",
    programmer = "pkobn_updi",
)
